k8s/local/backend_mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo6-deployment-local
  labels:
    app: mongo-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-local
  template:
    metadata:
      labels:
        app: mongo-local
    spec:
      containers:
        - image: mongo:6.0
          name: mongo6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-local
              mountPath: /data/db
      volumes:
        - name: mongo-local
          persistentVolumeClaim:
            claimName: mongo-pvc-local
---
apiVersion: v1
kind: Service
metadata:
  name: mongo6-service-local
spec:
  type: ClusterIP
  selector:
    app: mongo-local
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
