k8s/local/backend_redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis7-deployment
  labels:
    app: redis-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-local
  template:
    metadata:
      labels:
        app: redis-local
    spec:
      containers:
        - image: redis:7.2
          name: redis7
          imagePullPolicy: Always
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            fsGroup: 10001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-local
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5

          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 5

            # 💡 Recursos recomendados
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: redis-local
          persistentVolumeClaim:
            claimName: redis-pvc-local

---
apiVersion: v1
kind: Service
metadata:
  name: redis7-service-local
spec:
  type: ClusterIP
  selector:
    app: redis-local
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
