k8s/local/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  rules:
    - host: backend-gateway-service-local.local.svc.cluster.local
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-gateway-service-local
              port:
                number: 8090

    - host: keycloak-local.local.svc.cluster.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak-local
              port:
                number: 80
